メソッド抽出